--- a/roles/master/defaults/main.yml
+++ b/roles/master/defaults/main.yml
@@ -1,3 +1,6 @@
-#SPDX-License-Identifier: MIT-0
----
-# defaults file for master
+control_node_fw_ports:
+  - 6443/tcp
+  - 2379-2380/tcp
+  - 10250/tcp
+  - 10259/tcp
+  - 10257/tcp
