--- a/roles/master/vars/main.yml
+++ b/roles/master/vars/main.yml
@@ -1,3 +1,4 @@
 #SPDX-License-Identifier: MIT-0
 ---
-# vars file for master
+tigera_operator_url: https://raw.githubusercontent.com/projectcalico/calico/v3.31.3/manifests/tigera-operator.yaml
+custom_resources_url: https://raw.githubusercontent.com/projectcalico/calico/v3.31.3/manifests/custom-resources.yaml
