--- a/playbook.yml
+++ b/playbook.yml
@@ -1,16 +1,15 @@
 - hosts: all
+  become: true
   roles:
     - role: common
-  tasks:
-    # - name: "SSH initialization"
-    #   import_tasks: "./tasks/init-ssh.yml"
+  # tasks:
+  # - name: "SSH initialization"
+  #   import_tasks: "./tasks/init-ssh.yml"
 
-- hosts: master
-  gather_facts: false
+- hosts: masters
   roles:
     - role: master
 
 - hosts: workers
-  gather_facts: false
   roles:
     - role: worker
