--- a/roles/geerlingguy.containerd/tasks/main.yml
+++ b/roles/geerlingguy.containerd/tasks/main.yml
@@ -38,7 +38,7 @@
 - name: Set Cgroup driver to systemd
   lineinfile:
     insertafter: '.*\[plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options\]$'
-    line: '            SystemdCgroup = true'
+    line: "            SystemdCgroup = true"
     state: present
     path: /tmp/containerd_config.toml
   when: containerd_config_default_write and containerd_config_cgroup_driver_systemd
@@ -48,7 +48,7 @@
   ansible.builtin.lineinfile:
     path: /tmp/containerd_config.toml
     state: absent
-    line: '            SystemdCgroup = false'
+    line: "            SystemdCgroup = false"
   notify: restart containerd
   when: containerd_config_default_write and containerd_config_cgroup_driver_systemd
   changed_when: false
