--- a/roles/master/tasks/export-join-cmd.yml
+++ b/roles/master/tasks/export-join-cmd.yml
@@ -1,5 +1,6 @@
 - name: "Capture join command"
-  command: "kubeadm token create --print-join-command"
+  ansible.builtin.command:
+    cmd: "kubeadm token create --print-join-command"
   register: "join_cmd"
 
 - name: "Set join command as a global fact on localhost"
