--- a/roles/worker/tasks/firewalld.yml
+++ b/roles/worker/tasks/firewalld.yml
@@ -1,10 +1,12 @@
 - name: Ensure firewalld service is enabled and running
-  service:
+  become: true
+  systemd:
     name: firewalld
     state: started
     enabled: true
 
 - name: Ensure kubernetes control node ports are open
+  become: true
   firewalld:
     port: "{{ item }}"
     state: enabled
