--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -6,7 +6,7 @@
     path: /etc/kubernetes/kubelet.conf
   register: kubelet_conf
 
-- name: "Join node to the cluster"
+- name: "Ensure node is joined to the cluster"
   become: true
   ansible.builtin.command:
     cmd: "{{ hostvars['localhost']['kubeadm_join_cmd'] }}"
@@ -14,5 +14,14 @@
 
 - name: "Request master to label this node as a worker"
   ansible.builtin.command:
-    cmd: "kubectl label node {{ ansible_hostname }} node-role.kubernetes.io/worker=worker --overwrite=true"
-  delegate_to: "{{ groups['masters'][0] }}"
+    cmd: "kubectl label node {{ ansible_facts['hostname'] }} node-role.kubernetes.io/worker=worker --overwrite=true"
+  register: label_results
+  changed_when: "'not labeled' not in label_results.stdout"
+  delegate_to: "{{ item }}"
+  loop: "{{ groups['masters'] }}"
+  ignore_errors: true
+
+- name: "Ensure that labelling succeeded on at least one master"
+  fail:
+    msg: "Failed to label the node from any of the master nodes"
+  when: (label_results.results | select('succeeded') | list | length) == 0
