--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,13 +1,8 @@
 - name: "Ensure swap is disabled"
   import_tasks: "./swap.yml"
 
-- name: "Ensure ipv4 forwarding is enabled"
-  ansible.builtin.sysctl:
-    name: "net.ipv4.ip_forward"
-    value: "1"
-    state: present
-    reload: true
-    sysctl_file: /etc/sysctl.conf
+- name: "Ensure kernel networking paramaters are configured"
+  import_tasks: "./configure_kernel_params.yml"
 
 - name: "Ensure SELinux is set to permissive"
   ansible.posix.selinux:
