--- a/roles/master/tasks/init-kubeadm.yml
+++ b/roles/master/tasks/init-kubeadm.yml
@@ -5,12 +5,13 @@
 
 - name: "Copy kubeadm config to master host"
   copy:
-    src: "./files/kubeadm-config.yml"
+    src: "kubeadm-config.yml"
     dest: "{{ ansible_facts['user_dir'] }}/kubeadm-config.yml"
-    mode: 644
+    mode: "0644"
   when: not kubeadmin_conf_stat.stat.exists
 
 - name: "Ensure kubeadm is initialized"
+  become: true
   ansible.builtin.command:
-    cmd: "sudo kubeadm init --config={{ ansible_user_dir }}/kubeadm-config.yml"
+    cmd: "kubeadm init --config={{ ansible_facts['user_dir'] }}/kubeadm-config.yml"
   when: not kubeadmin_conf_stat.stat.exists
