--- a/roles/common/meta/main.yml
+++ b/roles/common/meta/main.yml
@@ -31,5 +31,8 @@ galaxy_info:
 
 dependencies:
   - role: geerlingguy.containerd
+    vars:
+      containerd_config_default_write: true
+      containerd_config_cgroup_driver_systemd: true
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
