--- a/roles/common/tasks/k8s.yml
+++ b/roles/common/tasks/k8s.yml
@@ -13,6 +13,16 @@
     name: ["kubelet", "kubeadm", "kubectl"]
     disable_excludes: "kubernetes"
 
+- name: "Check containerd config"
+  ansible.builtin.slurp:
+    src: /etc/containerd/config.toml
+  register: containerd_config
+
+- name: "Verify containerd cgroup driver"
+  ansible.builtin.fail:
+    msg: "SystemdCgroup is not set to true in /etc/containerd/config.toml"
+  when: "'SystemdCgroup = true' not in (containerd_config.content | b64decode)"
+
 - name: "Ensure kubelet service is enabled and running"
   service:
     name: "kubelet"
