--- a/roles/master/handlers/main.yml
+++ b/roles/master/handlers/main.yml
@@ -1,3 +1,5 @@
-#SPDX-License-Identifier: MIT-0
----
-# handlers file for master
+- name: reload firewalld
+  become: true
+  systemd:
+    name: firewalld
+    state: reloaded
