--- a/roles/common/meta/main.yml
+++ b/roles/common/meta/main.yml
@@ -34,5 +34,6 @@ dependencies:
     vars:
       containerd_config_default_write: true
       containerd_config_cgroup_driver_systemd: true
+    when: ansible_distribution != "Amazon"
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
