--- a/roles/master/tasks/init-kubeadm.yml
+++ b/roles/master/tasks/init-kubeadm.yml
@@ -13,5 +13,5 @@
 - name: "Ensure kubeadm is initialized"
   become: true
   ansible.builtin.command:
-    cmd: "kubeadm init --config={{ ansible_facts['user_dir'] }}/kubeadm-config.yml"
+    cmd: "kubeadm init --config={{ ansible_facts['user_dir'] }}/kubeadm-config.yml --node-name={{ ansible_facts['fqdn'] }}"
   when: not kubeadmin_conf_stat.stat.exists
